--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,9 @@ easyocr==1.6.2
 matplotlib==3.7.1
 opencv-python-headless==4.5.4.60
 numpy==1.24.2
+
+Now:
+easyocr==1.6.2
+matplotlib==3.8.0
+opencv-python-headless==4.5.4.60
+numpy==1.26.4
